# veoci-solution-mapper

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  veoci-map.spec
.github/workflows/: release.yml
src/veoci_mapper/: __init__.py  analyzer.py  cli.py  client.py  config.py  credentials.py  fetcher.py  graph.py  version.py
src/veoci_mapper/output/: __init__.py  dashboard.py  json_output.py  markdown.py  mermaid.py  visual.py
test-output/: solution.html  solution.json  solution.md  solution.mmd
test-output2/: solution.html  solution.json  solution.md  solution.mmd
